--- a/src/pages/networkcamera/index.astro
+++ b/src/pages/networkcamera/index.astro
@@ -46,19 +46,21 @@ const structuredData = {
     itemListElement: allProducts.map((product, index) => ({
       "@type": "ListItem",
       position: index + 1,
-      name: product.data.title,
-      image: {
-        "@type": "ImageObject",
-        contentUrl: new URL(product.data.imgCard.src, Astro.site).toString(),
-        creditText: "Hikvision " + product.data.title,
-        width: 800,
-        height: 800,
-      },
-      url: new URL(`/${category}/${product.slug}`, Astro.site).toString(),
+      item: {
+        "@type": "Product",
+        name: product.data.title,
+        image: {
+          "@type": "ImageObject",
+          contentUrl: new URL(product.data.imgCard.src, Astro.site).toString(),
+          creditText: "Hikvision " + product.data.title,
+          width: 800,
+          height: 800,
+        },
+        url: new URL(`/${category}/${product.slug}`, Astro.site).toString(),
+      }
     })),
   },
 };
-
 const mainColor = "#32869f";
 ---
 
