--- a/src/pages/networkcamera/index.astro
+++ b/src/pages/networkcamera/index.astro
@@ -20,27 +20,10 @@ const description = `Browse our comprehensive range of network camera products f
 const ogUrl = "https://dubai-hikvision.com/networkcamera";
 const structuredData = {
   "@context": "https://schema.org",
-  "@type": "BreadcrumbList",
-  itemListElement: [
-    {
-      "@type": "ListItem",
-      position: 1,
-      name: "Home",
-      item: "https://dubai-hikvision.com",
-    },
-    {
-      "@type": "ListItem",
-      position: 2,
-      name: "Products",
-      item: "https://dubai-hikvision.com/productsnew",
-    },
-    {
-      "@type": "ListItem",
-      position: 3,
-      name: category.charAt(0).toUpperCase() + category.slice(1),
-      item: `https://dubai-hikvision.com/networkcamera`,
-    },
-  ],
+  "@type": "CollectionPage",
+  "name": `Hikvision ${category.charAt(0).toUpperCase() + category.slice(1)} Products`,
+  "description": description,
+  "url": ogUrl,
   mainEntity: {
     "@type": "ItemList",
     itemListElement: allProducts.map((product, index) => ({
@@ -60,6 +43,29 @@ const structuredData = {
       }
     })),
   },
+  "breadcrumb": {
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://dubai-hikvision.com"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Products",
+        "item": "https://dubai-hikvision.com/productsnew"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": category.charAt(0).toUpperCase() + category.slice(1),
+        "item": ogUrl
+      }
+    ]
+  }
 };
 const mainColor = "#32869f";
 ---
